--- a/Action-Plans-Quick-Win.html
+++ b/Action-Plans-Quick-Win.html
@@ -36,7 +36,7 @@
     <nav class="navbar navbar-light bg-light">
         <div class="container-fluid">
             <!-- Logo -->
-            <a class="navbar-brand" href="file:///C:/Users/DELL/Desktop/techway/index.html">
+            <a class="navbar-brand" href="index.html">
                 <img class="logo" src="assets/images/Straxecute-Learning-LOGO.png" alt="Logo">
             </a>
 
@@ -70,7 +70,7 @@
                         <hr class="dropdown-divider">
                     </li>
                     <li>
-                        <a class="dropdown-item" href="file:///C:/Users/DELL/Desktop/techway/Profile.html">
+                        <a class="dropdown-item" href="Profile.html">
                             <i class="fas fa-user icon-color"></i> My Profile
                         </a>
                     </li>
