--- a/Knowladge Check.html
+++ b/Knowladge Check.html
@@ -80,7 +80,7 @@
                         <hr class="dropdown-divider">
                     </li>
                     <li>
-                        <a class="dropdown-item" href="file:///C:/Users/DELL/Desktop/techway/Profile.html">
+                        <a class="dropdown-item" href="Profile.html">
                             <i class="fas fa-user icon-color"></i> My Profile
                         </a>
                     </li>
