--- a/index.html
+++ b/index.html
@@ -16,18 +16,18 @@
 <body>
     <nav class="navbar navbar-light bg-light">
         <div class="container-fluid">
-            <a class="navbar-brand" href="file:///C:/Users/DELL/Desktop/techway/index.html">
+            <a class="navbar-brand" href="index.html">
                 <img src="assets/images/Straxecute-Learning-LOGO.png" alt="Logo" style="height: 90px;">
             </a>
             <div class="dropdown">
-                <a class="nav-link dropdown-toggle" href="file:///C:/Users/DELL/Desktop/techway/index.html" id="profileDropdown" role="button"
+                <a class="nav-link dropdown-toggle" href="index.html" id="profileDropdown" role="button"
                     data-bs-toggle="dropdown" aria-expanded="false">
-                    <img src="C:\Users\DELL\Desktop\techway\assets\images\profile.jpg" alt="Profile"
+                    <img src="assets/images/profile.jpg" alt="Profile"
                         class="profile-img">
                 </a>
                 <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="profileDropdown">
                     <li class="user-info">
-                        <img src="C:\Users\DELL\Desktop\techway\assets\images\profile.jpg" alt="Profile"
+                        <img src="assets/images/profile.jpg" alt="Profile"
                             class="profile-img">
                         <div>
                             <div class="name">John Doe</div>
@@ -37,7 +37,7 @@
                     <li>
                         <hr class="dropdown-divider">
                     </li>
-                    <li><a class="dropdown-item" href="file:///C:/Users/DELL/Desktop/techway/Profile.html"><i class="fas fa-user icon-color"></i> My Profile</a></li>
+                    <li><a class="dropdown-item" href="Profile.html"><i class="fas fa-user icon-color"></i> My Profile</a></li>
                     <li><a class="dropdown-item" href="#"><i class="fas fa-sign-out-alt icon-color"></i> Log Out</a>
                     </li>
                 </ul>
@@ -64,7 +64,7 @@
                                 <div class="progress-bar" role="progressbar" style="width: 75%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
                             </div> -->
                             
-                        <a href="file:///C:/Users/DELL/Desktop/techway/building-a-winning-career.html" target="_blank" class="btn btn-primary mb-1 mt-1">Details</a>
+                        <a href="building-a-winning-career.html" target="_blank" class="btn btn-primary mb-1 mt-1">Details</a>
                     </div>
                 </div>
             </div>
