--- a/building-a-winning-career.html
+++ b/building-a-winning-career.html
@@ -17,7 +17,7 @@
     <nav class="navbar navbar-light bg-light">
         <div class="container-fluid ">
             <!-- Logo -->
-            <a class="navbar-brand" href="file:///C:/Users/DELL/Desktop/techway/index.html">
+            <a class="navbar-brand" href="index.html">
                 <img class="logo" src="assets/images/Straxecute-Learning-LOGO.png" alt="Logo">
             </a>
             <!-- Author Section (Hidden on small screens) -->
@@ -49,7 +49,7 @@
                     <li>
                         <hr class="dropdown-divider">
                     </li>
-                    <li><a class="dropdown-item" href="file:///C:/Users/DELL/Desktop/techway/Profile.html"><i
+                    <li><a class="dropdown-item" href="Profile.html"><i
                                 class="fas fa-user icon-color"></i> My Profile</a></li>
                     <li><a class="dropdown-item" href="#"><i class="fas fa-sign-out-alt icon-color"></i> Log Out</a>
                     </li>
